sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:13: error: reassignment to val
    fin = fin -1
        ^